--- a/styles/Linktree.module.css
+++ b/styles/Linktree.module.css
@@ -2,20 +2,19 @@
   min-height: 100vh;
   display: flex;
   justify-content: center;
-  padding: 3% 0;
+  padding: 50px 0;
 }
 
 .container {
   width: 100%;
   max-width: 400px;
-  border: 2px solid #000;
+  /* border: 2px solid #000; */
   border-radius: 1rem;
   padding: 1rem;
 }
 
 .header {
   padding-bottom: 2rem;
-  /* border: 1px solid red; */
 }
 
 .img {
@@ -23,7 +22,7 @@
   height: 100px;
   margin: 0 auto;
   border-radius: 50%;
-  border: 1px solid #000;
+  /* border: 1px solid #000; */
   overflow: hidden;
 }
 
@@ -32,9 +31,13 @@
   text-align: center;
   font-weight: 400;
   margin-top: 1rem;
+  font-size: 1rem;
+  font-weight: 700;
+  /* color: #fff; */
 }
 
 .bio {
   text-align: center;
   margin-top: 0.5rem;
+  /* color: #fff; */
 }
